example pipe working

--- a/examples/easy_start/spm_auditory_preproc.ini
+++ b/examples/easy_start/spm_auditory_preproc.ini
@@ -78,7 +78,7 @@ deleteorient = False
 ############################
 
 # Don't you want us to do Slice-Timing Correction (STC) ?
-disable_slice_timing = False
+disable_slice_timing = True
 
  # Repetition Time
 TR = 7.
